[metadata]
name = trendvisualizer

url = https://github.com/GBERESEARCH/trendvisualizer

author = GBERESEARCH
author_email = gberesearch@gmail.com
version = attr: trendvisualizer.__version__

description = Visualize trend strength across various markets.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
package_dir=
    =src
packages=find:

install_requires = 
    numpy >= 1.24.1
    requests >= 2.28.1
    pandas >= 1.5.2
    matplotlib >= 3.7.1
    matplotlib-inline >= 0.1.6
    seaborn >= 0.12.2
    norgatedata >= 1.0.64
    yahoofinancials >= 1.7
    technicalmethods >= 0.2.4
    lxml >= 4.9.2

[options.packages.find]
where=src